[gd_scene load_steps=2 format=3 uid="uid://cxxxxxxxxxxx"]

[ext_resource type="Script" path="res://Scripts/Game/Game.gd" id="1_0nx8w"]

[node name="Game" type="Node2D"]
script = ExtResource("1_0nx8w")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.12549, 0.25098, 0.196078, 1)

[node name="Player" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="PlayerSprite" type="Sprite2D" parent="Player"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 50.0
text = "Счет: 0"

[node name="PauseButton" type="Button" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Пауза"

[node name="PauseMenu" type="Control" parent="HUD"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResumeButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Продолжить"

[node name="MainMenuButton" type="Button" parent="HUD/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Главное меню"

[connection signal="pressed" from="HUD/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
